--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 </head>
 <body>
 
+    <h1>The Psychic Game</h1>
+    <p>Guess what letter I'm thinking of</p>
+    <p>Wins: </p>
+    <p>Losses: </p>
+    <p>Guesses left: </p>
+    <p>Your guesses so far: </p>
+
     <!-- Have computer make a choice
     Have the user make a choice
     Capture the choices
@@ -34,6 +41,7 @@
             }
             else (userGuess !== computerChoice) {
                 guessCounter--;
+                //prints the incorrect guess//
             }
 
             if (guessCounter === 0) {
